# reasoning-models-lie

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
analysis/data/: accuracy.csv  changed_to_hinted.csv  verbalization.csv  verbalization_manual_annotations.jsonl
analysis/scripts/: annotate_hint_verbalization.py  compute_kappa_hint_verbalization.py  get_accuracy_csv.py  get_hint_usage_csv.py  get_verbalization_csv.py  plot_accuracy.r  plot_hint_usage.r  plot_verbalization.r
experiments/: build_check_verbalization_prompts.py  build_evaluation_prompts.py  evaluate_faithfulness.py  evaluate_multiple_choice.py  get_change_to_hint_examples.py  print_examples.py  prompt.py
experiments/gpqa/prompts/evaluate/: gpqa_diamond_verbalize_baseline_prompts_kimi.jsonl  (+21 more)
experiments/gpqa/scripts/: build_gpqa_check_verbalization_prompts.sh  build_gpqa_evaluation_prompts.sh  check_verbalization_all_gpqa_results.sh  get_all_changed_responses.sh
experiments/mmlu_pro/scripts/: build_mmlu_pro_check_verbalization_prompts.sh  build_mmlu_pro_test200_evaluation_prompts.sh  evaluate_all_mmlu_results.sh  get_all_changed_responses.sh
src/reasoning_models_lie/: __init__.py
src/reasoning_models_lie/data_loaders/: constants.py  gpqa.py  mmlu_pro.py
src/reasoning_models_lie/evaluation/: faithfulness.py  multiple_choice.py
src/reasoning_models_lie/prompting/: prompting_langchain.py  prompting_together.py  prompting_utils.py
src/reasoning_models_lie/prompts/: gpqa.py  hints.py  mmlu_pro.py
tests/: __init__.py  test_imports.py
(+398 files in other folders)
